--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "firebase-tools": "^7.14.0",
     "terser": "^4.6.6"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
